After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 684677 - drive-connected signal emitted on GVolumeMonitor creation
drive-connected signal emitted on GVolumeMonitor creation
Status: RESOLVED FIXED
Product: gvfs
Classification: Core
Component: general
1.13.x
Other Linux
: Normal normal
: ---
Assigned To: gvfs-maint
gvfs-maint
Depends on:
Blocks:
 
 
Reported: 2012-09-23 18:52 UTC by Cosimo Cecchi
Modified: 2012-09-25 14:46 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
proxy: don't emit connected/added signals at object creation (1.56 KB, patch)
2012-09-23 18:54 UTC, Cosimo Cecchi
committed Details | Review

Description Cosimo Cecchi 2012-09-23 18:52:47 UTC
The GProxyVolumeMonitor implementation in gvfs seems to unnecessarily emit *-added/*-connected signals when the object is created and a name owner for the remote volume monitor exists.
This causes a minor annoyance in the shell, where the "device-added" sound is played when the shell starts up.

Patch coming.
Comment 1 Cosimo Cecchi 2012-09-23 18:54:21 UTC
Created attachment 225032 [details] [review]
proxy: don't emit connected/added signals at object creation

It's unnecessary to emit those signals when the object is created, and
it can cause weird side-effects if applications e.g. play a sound on
signal emission.
Comment 2 Tomas Bzatek 2012-09-25 09:59:09 UTC
Review of attachment 225032 [details] [review]:

Seems to be working fine, patch makes sense. My only concern is a possible break of applications that depend on signals on startup. Let's push this to master, targetting Gnome 3.7 cycle and watch for breaks.
Comment 3 Cosimo Cecchi 2012-09-25 14:46:51 UTC
Attachment 225032 [details] pushed as ca7743a - proxy: don't emit connected/added signals at object creation

Sounds good, thanks for the review!