proxy: don't emit connected/added signals at object creation

It's unnecessary to emit those signals when the object is created, and
it can cause weird side-effects if applications e.g. play a sound on
signal emission.

https://bugzilla.gnome.org/show_bug.cgi?id=684677
(cherry picked from commit ca7743a63721c3dd1c166006539e356412466dcc)